<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.Hijaiyah.DetailMateriHijaiyah1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/md_theme_onPrimary"
        android:elevation="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_hijaiyah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:padding="12dp"
            android:text="@string/txt_hijaiyah"
            android:shadowColor="@color/md_theme_scrim"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1.5"
            android:textAlignment="center"
            android:textColor="@color/md_theme_primaryContainer"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_back"
            android:onClick="onBackPressed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_onPrimary"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_action_bar">

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:shadowColor="@color/md_theme_scrim"
            android:text="@string/txt_apa_itu_hijaiyah1"
            android:textColor="@color/md_theme_primaryContainer"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:text="@string/txt_detail_desc"
            android:textAlignment="inherit"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_next"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="16dp"
        android:onClick="nextPage"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_primaryContainer">

            <ImageView
                android:id="@+id/iv_setelah"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/img_setelah" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
