<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_onPrimary"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingTop="20dp"
            android:shadowColor="@color/md_theme_scrim"
            android:shadowDx="2"
            android:shadowDy="2"
            android:fontFamily="@font/poppins_bold"
            android:shadowRadius="1.5"
            android:text="@string/txt_selamat_datang_di"
            android:textColor="@color/md_theme_primaryContainer"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/tv_title_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:layout_marginBottom="12dp"
            android:paddingHorizontal="2dp"
            android:src="@drawable/img_logo"
            android:textAlignment="center" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_banner"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="4dp"
        app:cardBackgroundColor="@color/md_theme_secondaryContainer"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/ll_header">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_banner" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/txt_kategori_belajar"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        android:shadowColor="@color/md_theme_scrim"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1.5"
        android:textColor="@color/md_theme_primaryContainer"
        android:layout_marginVertical="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_banner" />
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_hijaiyah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:onClick="navigateToDetailHijaiyah"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_category">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_card_home">

            <ImageView
                android:id="@+id/iv_hijaiyah"
                android:layout_width="140dp"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                app:layout_constraintDimensionRatio="H,2:1.4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/img_hijaiyah" />

            <TextView
                android:id="@+id/tv_hijaiyah"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="1"
                android:fontFamily="@font/poppins_bold"
                android:paddingVertical="8dp"
                android:textColor="@color/md_theme_primaryContainer"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_hijaiyah"
                android:text="@string/txt_hijaiyah" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_harakat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:onClick="navigateToDetailHarakat"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_hijaiyah">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_card_home">

            <ImageView
                android:id="@+id/iv_harakat"
                android:layout_width="140dp"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:padding="18dp"
                app:layout_constraintDimensionRatio="H,2:1.4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/img_harakat" />

            <TextView
                android:id="@+id/tv_harakat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_bold"
                android:maxLines="1"
                android:paddingVertical="8dp"
                android:textColor="@color/md_theme_primaryContainer"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_harakat"
                android:text="@string/txt_harakat" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_bg"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>