<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.Latihan.LatihanFragment">

    <LinearLayout
        android:id="@+id/ll_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/md_theme_onPrimary"
        android:elevation="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:padding="12dp"
            android:text="@string/txt_latihan_soal"
            android:shadowColor="@color/md_theme_scrim"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1.5"
            android:textAlignment="center"
            android:textColor="@color/md_theme_primaryContainer"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_latihan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:src="@drawable/img_banner"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_action_bar"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_level1"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardCornerRadius="16dp"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_latihan">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_card_home">

            <ImageView
                android:id="@+id/iv_level1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/img_level1" />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_gradient"/>

            <TextView
                android:id="@+id/tv_level1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingVertical="8dp"
                android:textColor="@color/md_theme_onPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/txt_level1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_level2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardCornerRadius="16dp"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_level1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_card_home">

            <ImageView
                android:id="@+id/iv_level2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/img_level2" />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_gradient"/>

            <TextView
                android:id="@+id/tv_level2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingVertical="8dp"
                android:textColor="@color/md_theme_onPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/txt_level2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>