<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.Hijaiyah.DetailMateriHijaiyah3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/md_theme_onPrimary"
        android:elevation="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_hijaiyah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:padding="12dp"
            android:text="@string/txt_hijaiyah"
            android:shadowColor="@color/md_theme_scrim"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1.5"
            android:textAlignment="center"
            android:textColor="@color/md_theme_primaryContainer"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="120dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img_detail3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_ta"
            android:paddingTop="16dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ta adalah huruf ketiga dalam alfabet Arab. Huruf ini memiliki bentuk seperti huruf 't' dalam alfabet Latin."
            android:paddingTop="16dp"
            android:paddingHorizontal="20dp"
            android:textSize="14sp"
            android:textAlignment="inherit"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_buttonDengar"
            android:layout_width="180dp"
            android:layout_height="60dp"
            app:cardCornerRadius="16dp"
            android:layout_marginVertical="50dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/md_theme_primaryContainer">

                <ImageView
                    android:id="@+id/iv_dengar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="4dp"
                    android:paddingStart="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/img_dengar" />

                <TextView
                    android:id="@+id/tv_dengar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_dengar"
                    app:layout_constraintStart_toEndOf="@id/iv_dengar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_buttonSebelum"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="16dp"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_primaryContainer">

            <ImageView
                android:id="@+id/iv_sebelum"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/img_sebelum" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>